<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_sub" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/home_forget_mobile"
            android:textColor="@color/text_39"
            android:textSize="@dimen/px36" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px40"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_coners_white"
            android:gravity="center_vertical"
            android:hint="@string/home_forget_mobileInput"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="@dimen/px22"
            android:paddingLeft="@dimen/px12"
            android:paddingTop="@dimen/px22"
            android:singleLine="true"
            android:textSize="@dimen/px36" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/home_forget_verifiCode"
            android:textColor="@color/text_39"
            android:textSize="@dimen/px36" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px40"
            android:layout_marginRight="8dp"
            android:layout_weight="4"
            android:background="@drawable/bg_coners_white"
            android:gravity="center_vertical"
            android:hint="@string/home_forget_verifiCodeInput"
            android:maxLength="8"
            android:paddingBottom="@dimen/px22"
            android:paddingLeft="@dimen/px12"
            android:paddingTop="@dimen/px22"
            android:singleLine="true"
            android:textSize="@dimen/px36" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:text="@string/get_code"
            android:singleLine="true"
            android:paddingRight="@dimen/px24"
            android:gravity="right"
            android:textColor="@color/bg_theme"
            android:textSize="@dimen/px38" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_theme_selector"
        android:gravity="center"
        android:text="@string/positive"
        android:textColor="@color/white_sd"
        android:textSize="@dimen/px36" />

</LinearLayout>
