<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_sub" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/px40"
        android:text="@string/exception_description"
        android:textColor="@color/text_63"
        android:textSize="@dimen/px34" />

    <EditText
        android:id="@+id/ed_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:background="@drawable/bg_coners_white"
        android:gravity="top"
        android:hint="@string/exception_des_hint"
        android:maxLength="200"
        android:padding="@dimen/px20"
        android:textColor="@color/black_sd1"
        android:textColorHint="@color/black_sd4"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:layout_marginTop="@dimen/px60"
        android:background="@drawable/bg_coners_green"
        android:gravity="center"
        android:padding="@dimen/px32"
        android:text="@string/positive"
        android:textColor="@color/white_sd"
        android:textSize="@dimen/px32" />

</LinearLayout>
