<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_coners_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px50"
        android:text="更新提示"
        android:textColor="@color/black_sd1"
        android:textSize="@dimen/px42" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/px20"
        android:gravity="left"
        android:padding="@dimen/px30"
        android:text="@string/updateContetn"
        android:textColor="@color/black_sd4"
        android:textSize="@dimen/px36" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_sd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/px30"
            android:paddingTop="@dimen/px30"
            android:text="@string/letItGo"
            android:textColor="@color/gray_sd1"
            android:textSize="@dimen/px36" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray_sd" />


        <TextView
            android:id="@+id/tv_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/px30"
            android:paddingTop="@dimen/px30"
            android:text="@string/updateApp"
            android:textColor="@color/green_theam"
            android:textSize="@dimen/px36" />
    </LinearLayout>
</LinearLayout>
