<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tl="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_sub" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CECECE" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_sd"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_today"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/px20"
            android:layout_marginRight="@dimen/px20"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/statis_today"
            android:background="@drawable/radio_button_bottom_line"
            android:textColor="@drawable/selector_radiocolor"
            android:textSize="@dimen/px35" />

        <RadioButton
            android:id="@+id/radio_yesterday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/px20"
            android:layout_marginRight="@dimen/px20"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/radio_button_bottom_line"
            android:text="@string/statis_yestoday"
            android:textColor="@drawable/selector_radiocolor"
            android:textSize="@dimen/px35" />

        <RadioButton
            android:id="@+id/radio_week"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/px20"
            android:layout_marginRight="@dimen/px20"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/radio_button_bottom_line"
            android:text="@string/statis_week"
            android:textColor="@drawable/selector_radiocolor"
            android:textSize="@dimen/px35" />

        <RadioButton
            android:id="@+id/radio_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/px20"
            android:layout_marginRight="@dimen/px20"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/radio_button_bottom_line"
            android:text="@string/statis_more"
            android:textColor="@color/black_sd3"
            android:textSize="@dimen/px35" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CECECE" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smarfresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnableFooterFollowWhenLoadFinished="true"
        app:srlEnableScrollContentWhenLoaded="true"
        app:srlHeaderMaxDragRate="2.5">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp" />

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ecedf1" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>
